# workshop_management_server_rust

./: Cargo.toml  README.md  workshopmanagement.sql
src/: main.rs
src/models/: client.rs  error.rs  material.rs  material_type.rs  mod.rs  project.rs  project_material.rs
src/tests/: mod.rs  repo_tests.rs
src/utils/: controller.rs  keycloak.rs  mod.rs  repo_tests.rs  repository.rs
