[package]
name = "workshop_service"
author = "Justin Kosten"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mysql = "*"
actix-web = "4.0.0-beta.10"
actix-rt = "2.3.0"
actix-cors = "0.7.0"
actix-web-httpauth = "0.8.1"
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
